2011-5-x
Less memory consumption in scfg/ghkm/tree extraction by frequently checking memory usage (+ slightly slower)
Less memory consumption in parse-coarse
Better feature-vector implementation with smaller storage
Removed "dot" and use separate "dot_product" in dot_product.hpp
Binarize-all now shares binarized nodes in a forest
added --multiple option for cicada_unite_*

2011-5-18
Serious bugfix for generate-earley. We will now check the depth of all the passive/active edges to be extended.

2011-5-17
Serious bugfix for simple vector, wrt resize/insert/erase, which affect feature-vectors.

2011-5-16
Bugfix for spurious memory allocation in compose-cky, parse-cky and parse-coarse
Bugfix for topological sort after compose-tree and parse-tree
Better memory management in compose/parse operations

2011-5-9
Added a sample grammar file to support zone/wall found in moses.
Added experimental compose-tree-cky and parse-tree-cky for string-to-tree translation!
Support cky-style indexing in tree-transducer for string-to-tree translation.
Better global lexicon learning by limiting the source word features
More compact representation for feature vectors
Bugfix: use base10 -99 for Pr(<s>)

2011-4-22
Added push-bos-eos which annotates forests with <s> </s>. Use with no-bos-eos options for ngram/variational features.
Added prune-edge which prunes forests wrt # of edges for each node.
Added parse-tree which is an approximated beam variant of compose-tree
Randomize hill-climbing for oracle computation.
Incompatible change: word-penalty feature do not count <s> </s> as a "word"
Bugfix: when assigned weights or weights-one, do not perform "assign"
Bugfix: prune-kbest will not "prune" when we cannot generate suffixient # of kbests.

2011-4-18
Added coarse-to-fine parsing
Added coarse grammar learning
Added epsilon-removal for hypergraph
Added no-bos-eos option to ngram feature which will not score via <s> </s>, assuming <s> and </s> are used in grammar