@@ -161,7 +161,7 @@ void options(int argc, char** argv)
     ("max-height", po::value<int>(&max_height)->default_value(max_height), "maximum height of a rule")
     
     ("exhaustive",  po::bool_switch(&exhaustive),                           "exhausive extraction")
-    ("constrained", po::bool_switch(&constrained),                          "constrained minimum extractionx")
+    ("constrained", po::bool_switch(&constrained),                          "constrained minimum extraction")
     ("inverse",     po::bool_switch(&inverse),                              "inversed word alignment")
     ("swap",        po::bool_switch(&swap_source_target),                   "swap source/target")
     
