@@ -33,6 +33,7 @@ path_type output_file;
 int max_nodes = 15;
 int max_height = 3;
 bool exhaustive = false;
+bool constrained = false;
 bool inverse = false;
 
 double max_malloc = 8; // 8 GB
@@ -72,7 +73,7 @@ int main(int argc, char** argv)
     utils::resource start_extract;
     
     queue_type queue(1024 * threads);
-    task_set_type tasks(threads, task_type(queue, output_file, max_nodes, max_height, exhaustive, inverse, max_malloc));
+    task_set_type tasks(threads, task_type(queue, output_file, max_nodes, max_height, exhaustive, constrained, inverse, max_malloc));
     boost::thread_group workers;
     for (int i = 0; i != threads; ++ i)
       workers.add_thread(new boost::thread(boost::ref(tasks[i])));
@@ -152,10 +153,11 @@ void options(int argc, char** argv)
     ("alignment", po::value<path_type>(&alignment_file), "alignment file")
     ("output",    po::value<path_type>(&output_file),    "output directory")
     
-    ("max-nodes",  po::value<int>(&max_nodes)->default_value(max_nodes),   "maximum # of nodes in a rule")
-    ("max-height", po::value<int>(&max_height)->default_value(max_height), "maximum height of a rule")
-    ("exhaustive", po::bool_switch(&exhaustive),                           "exhausive extraction")
-    ("inverse",    po::bool_switch(&inverse),                              "inversed word alignment")
+    ("max-nodes",   po::value<int>(&max_nodes)->default_value(max_nodes),   "maximum # of nodes in a rule")
+    ("max-height",  po::value<int>(&max_height)->default_value(max_height), "maximum height of a rule")
+    ("exhaustive",  po::bool_switch(&exhaustive),                           "exhausive extraction")
+    ("constrained", po::bool_switch(&constrained),                          "constrained minimum extraction")
+    ("inverse",     po::bool_switch(&inverse),                              "inversed word alignment")
     
     ("max-malloc", po::value<double>(&max_malloc), "maximum malloc in GB")
     ("threads",    po::value<int>(&threads),       "# of threads")
